--- a/index.html
+++ b/index.html
@@ -147,35 +147,35 @@
   <div class="slider">
     <ul class="slides">
       <li>
-        <img src="assets/img/training1.jpg"> <!-- random image -->
+        <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Terkadang kita diuji bukan untuk menunjukkan kelemahan kita, tetapi untuk menemukan kekuatan kita."</h5>
         </div>
       </li>
       <li>
-        <img src="assets/img/training1.jpg"> <!-- random image -->
+        <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Semakin keras kamu bekerja untuk sesuatu, semakin besar perasaanmu saat mencapainya."</h5>
         </div>
       </li>
       <li>
-        <img src="assets/img/training1.jpg"> <!-- random image -->
+        <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Jangan takut berjalan lambat, takutlah jika hanya berdiri diam."</h5>
         </div>
       </li>
       <li>
-        <img src="assets/img/training1.jpg"> <!-- random image -->
+        <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Apabila sesuatu yang kau senangi tidak terjadi maka senangilah apa yang terjadi." – Ali bin Abi Thalib</h5>
         </div>
       </li>
       <li>
-        <img src="assets/img/training1.jpg"> <!-- random image -->
+        <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Kesuksesan dan kegagalan sama-sama bagian dari hidup. Keduanya sama-sama sementara.” - Shahrukh Khan</h5>
