--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
         <img src="assets/img/training1.jpg">
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
+          <h5 class="light grey-text text-lighten-3">Jadikan setiap hari mahakarya Anda. Hidup sekarang. Hidup bukan nanti." - John Wooden</h5>
+        </div>
+      </li>
+      <li>
+        <img src="assets/img/training1.jpg">
+        <div class="caption left-align">
+          <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Semakin keras kamu bekerja untuk sesuatu, semakin besar perasaanmu saat mencapainya."</h5>
         </div>
       </li>
@@ -172,6 +179,13 @@
         <div class="caption left-align">
           <i class="material-icons">format_quote</i>
           <h5 class="light grey-text text-lighten-3">Apabila sesuatu yang kau senangi tidak terjadi maka senangilah apa yang terjadi." – Ali bin Abi Thalib</h5>
+        </div>
+      </li>
+      <li>
+        <img src="assets/img/training1.jpg">
+        <div class="caption left-align">
+          <i class="material-icons">format_quote</i>
+          <h5 class="light grey-text text-lighten-3">Betapapun sulitnya hidup, selalu ada sesuatu yang dapat kamu lakukan dan berhasil." - Stephen Hawking</h5>
         </div>
       </li>
       <li>
