--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <a id="logo-container" href="index.html" class="brand-logo">PORTUGAL<span class=" red-text red-darken-2">.</span></a>
         
         <ul class="right hide-on-med-and-down">
+          <li><a href="pages/tugas.html">Tugas</a></li>
+          <li><a href="latihan.html">Latihan</a></li>
+          <li><a href="#author">About Author</a></li>
           <li>
             <a class="waves-effect waves-light btn pink accent-3" href="https://www.instagram.com/anang_fa/" target="blank">
               <span class="iconify-inline fa-beat" data-icon="mdi:instagram"></span>
@@ -27,27 +30,18 @@
             </a>
           </li>
         </ul>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#author">About Author</a></li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#">Latihan</a></li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#">Tugas</a></li>
-        </ul>
 
-        <!--sidenav mobile-->
-        <ul id="nav-mobile" class="sidenav">
-          <li></li>
-          <li><a href="#">Tugas</a></li>
-          <li><a href="#">Latihan</a></li>
-          <li><a href="#author">About Author</a></li>
-        </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons red-text red-darken-2">menu</i></a>
       </div>
     </nav>
   </div>
+
+  <!--sidenav mobile-->
+  <ul id="nav-mobile" class="sidenav">
+    <li><a href="pages/tugas.html">Tugas</a></li>
+    <li><a href="latihan">Latihan</a></li>
+    <li><a href="#author">About Author</a></li>
+  </ul>
 
   <!--Fixed Action Button Follow-->
   <div class="fixed-action-btn">
@@ -55,9 +49,9 @@
     class="btn-floating pulse pink accent-3 tooltipped hide-on-large-only" 
     data-position="left" 
     data-tooltip="Follow Us">
-    <i class="fab fa-instagram right"></i>
+        <i class="fab fa-instagram right"></i>
     </a>
-  </div>
+</div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -107,7 +101,7 @@
       <div class="container">
         <div class="row center">
           <h5 class="header col s12 light">Kunjungi Halaman Portal Tugas dan Latihan</h5>
-          <a class="waves-effect waves-light btn red darken-2">TUGAS</a>
+          <a class="waves-effect waves-light btn red darken-2" href="pages/tugas.html">TUGAS</a>
           <a class="waves-effect waves-light btn red darken-2">LATIHAN</a>
         </div>
       </div>
@@ -198,13 +192,11 @@
   <footer class="page-footer red darken-2">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col l8 s12">
           <h5 class="white-text">About PORTUGAL.</h5>
-          <p class="grey-text text-lighten-4">Sebuah Portal Online yang digunakan untuk menampung source code tugas pada mata kuliah Web Programming. Portal ini sekaligus sebagai penampil hasil coding kita.</p>
-
-
+          <p class="grey-text text-lighten-4">Sebuah Portal Online yang digunakan untuk menampung source code tugas pada mata kuliah Web Programming. Portal ini sekaligus sebagai penampil hasil coding kita, sehingga memudahkan kita dalam mengumpulkan tugas kepada dosen.</p>
         </div>
-        <div class="col l3 s12">
+        <!-- <div class="col l3 s12">
           <h5 class="white-text">Settings</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -221,12 +213,12 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by Anang Khoirul Fadli with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
@@ -239,16 +231,22 @@
   <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
   <script>
     M.AutoInit(); 
-  </script>
 
-  <script>
+    //init slider
     document.addEventListener('DOMContentLoaded', function() {
-    var elems = document.querySelectorAll('.slider');
-    var instances = M.Slider.init(elems,{
+    var slide = document.querySelectorAll('.slider');
+    var instances = M.Slider.init(slide,{
       indicators: false,
       interval: 7000
     });
     });
+
+    //init sidenav
+    document.addEventListener('DOMContentLoaded', function() {
+    var navMobile = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(navMobile, );
+  });
   </script>
+
   </body>
 </html>
