--- a/pages/tugas05/tugas5.html
+++ b/pages/tugas05/tugas5.html
@@ -62,147 +62,168 @@
                 <td>Nama</td>
                 <td>NIM</td>
                 <td class="center">Nilai</td>
-                <td>Predikat</td>
+                <td class="center">Predikat</td>
+                <td>Keterangan</td>
               </thead>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Ayu Susanti</td>
                 <td>18292456</td>
                 <td class = "nilai center">78</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Bagya Prasetyo</td>
                 <td>18292471</td>
                 <td class = "nilai center">66</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Cakrawangsa Prayoga</td>
                 <td>18292454</td>
                 <td class = "nilai center">89</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Citra Anggraini</td>
                 <td>18292470</td>
                 <td class = "nilai center">75</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Danang Mustofa</td>
                 <td>18292463</td>
                 <td class = "nilai center">64</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Drajat Simanjuntak</td>
                 <td>18292460</td>
                 <td class = "nilai center">71</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Edi Setiawan</td>
                 <td>18292468</td>
                 <td class = "nilai center">51</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Eka Maheswara</td>
                 <td>18292465</td>
                 <td class = "nilai center">69</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Eka Wijayanti</td>
                 <td>18292462</td>
                 <td class = "nilai center">79</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Faizah Uyainah</td>
                 <td>18292458</td>
                 <td class = "nilai center">83</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Hendra Budiyanto</td>
                 <td>18292455</td>
                 <td class = "nilai center">87</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Hilda Yulianti</td>
                 <td>18292469</td>
                 <td class = "nilai center">73</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Himawan Natsir</td>
                 <td>18292472</td>
                 <td class = "nilai center">62</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Icha Halimah</td>
                 <td>18292466</td>
                 <td class = "nilai center">75</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Karimah Maryati</td>
                 <td>18292453</td>
                 <td class = "nilai center">50</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Muhammad Wibisono</td>
                 <td>18292457</td>
                 <td class = "nilai center">73</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Mulyono Irawan</td>
                 <td>18292461</td>
                 <td class = "nilai center">81</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Rizki Kurniawan</td>
                 <td>18292464</td>
                 <td class = "nilai center">77</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Tania Anggraini</td>
                 <td>18292459</td>
                 <td class = "nilai center">80</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
               <tr>
                 <td class = "nomor center"></td>
                 <td>Titin Wijayanti</td>
                 <td>18292467</td>
                 <td class = "nilai center">76</td>
-                <td class = "predikat"></td>
+                <td class = "predikat center"></td>
+                <td class="keterangan"></td>
               </tr>
             </table>
         </div>
