--- a/pages/tugas05/tugas5.html
+++ b/pages/tugas05/tugas5.html
@@ -63,7 +63,7 @@
                 <td>NIM</td>
                 <td class="center">Nilai</td>
                 <td class="center">Predikat</td>
-                <td>Keterangan</td>
+                <td>Ket.</td>
               </thead>
               <tr>
                 <td class = "nomor center"></td>
